archive/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-my-app
  labels:
    app: my-app
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
        env: dev
    spec:
      containers:
      - name: my-container
        image: my-first-app:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 80
